spotify_site/static/style.css
@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700&display=swap');
@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');

body {
    font-family: 'Maven Pro', sans-serif;
    text-align: center;
    font-size: 20px;
    background-color: #0f0f0f;
    color: white;
}

h1 {
    font-weight: 500;
}

.nav-bar {
    display: flex;
    justify-content: space-between;
    padding: 0px 10px;
}

.nav-list {
    display: flex;
    flex-direction: row;
    list-style-type: none;
    margin: 0;
    padding: 10px 0px;
    width: 100%;
    overflow: hidden;
    transition: transform 1s ease-out;
}

.nav-item {
    float: left;
}

.nav-item a {
    display: block;
}

.nav-home {
    font-weight: 600;
    font-style: italic;
}

.link {
    text-decoration: none;
    color: inherit;
    font-size: 1.4rem;
    position: relative;
    padding: 10px;
}

.link:after {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    width: 0%;
    content: '.';
    color: transparent;
    background: white;
    height: 1px;
    transition: all .5s;
}

.link:hover:after {
    width: 100%;
}

.hamburger-icon {
    display: none;

}

.time-period-selector {
    display: flex;
    justify-content: center;
}

.home-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.links-container {
    display: flex;
    justify-content: center;
}

.links {
    display: flex;
    justify-content: space-around;
    width: 50%;
}

.table-container {
    display: flex;
    justify-content: center;
}

.explain-table {
    display: flex;
    flex-direction: column;
    width: 70%;
}

.explain-row {
    display: flex;
    gap: 2rem;
}

.explain-title {
    font-weight: 600;
    font-style: italic;
    font-size: 1.4rem;
    margin: 1em;
}

.explain-img {
    filter: invert(1);
    width: 12rem;
}

@media all and (max-width: 1000px) {
    .explain-table {
        width: 90%;
    }

    .explain-row {
        flex-direction: column;
        align-items: center;
        gap: 0rem;
    }

    .explain-title {
        margin: 0;
    }

    .explain-img {
        width: 8rem;
    }
}

.top-data-img {
    width: 100%;
}

.top-data-list {
    display: grid;
    max-width: 1000px;
    grid-template-columns: repeat(3, minmax(0, 1fr));
    row-gap: 2rem;
    column-gap: 2rem;
    padding: 0;
}

.top-data-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    box-sizing: border-box;
}

.data-container {
    display: flex;
    justify-content: center;
    margin: 1em;
}

.graph-data-list {
    grid-template-columns: none;
    width: 100%;
}

.graph-data-img {
    width: 100%;
}


@media screen and (max-width: 600px) {
    .nav-list .nav-item:not(:first-child) {
        display: none;
    }

    .hamburger-icon {
        float: right;
        display: block;
    }

    .nav-list.responsive {
        display: flex;
        flex-direction: column;
        width: 100%;
    }

    .nav-list.responsive .nav-item {
        display: list-item;
    }

    .top-data-list {
        row-gap: 1rem;
        column-gap: 1rem;
    }
}

